--- a/src/Client/ProtonVPN.Client/MainWindow.xaml
+++ b/src/Client/ProtonVPN.Client/MainWindow.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!--
-Copyright (c) 2023 Proton AG
+Copyright (c) 2025 Proton AG
 
 This file is part of ProtonVPN.
 
@@ -18,20 +18,19 @@ You should have received a copy of the GNU General Public License
 along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<wex:WindowEx x:Class="ProtonVPN.Client.MainWindow"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:components="using:ProtonVPN.Client.UI.Main.Components"
-              xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:reportissue="using:ProtonVPN.Client.UI.Dialogs.ReportIssue"
-              xmlns:tray="using:ProtonVPN.Client.UI.Tray"
-              xmlns:ui="using:ProtonVPN.Client.UI"
-              xmlns:wex="using:WinUIEx"
-              MinWidth="566"
-              MinHeight="609"
-              mc:Ignorable="d">
+<custom:BaseWindow x:Class="ProtonVPN.Client.MainWindow"
+                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:components="using:ProtonVPN.Client.UI.Main.Components"
+                   xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
+                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                   xmlns:reportissue="using:ProtonVPN.Client.UI.Dialogs.ReportIssue"
+                   xmlns:tray="using:ProtonVPN.Client.UI.Tray"
+                   xmlns:ui="using:ProtonVPN.Client.UI"
+                   MinWidth="566"
+                   MinHeight="609"
+                   mc:Ignorable="d">
 
     <!--  There's a consistent difference between the size defined here and the actual size  -->
     <!--  Adds 16px to the width and 9px to the height to compensate  -->
@@ -43,7 +42,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 
         <custom:WindowContentControl.TitleBarLeftContent>
             <components:TitleBarMenuComponent x:Name="TitleBarMenuComponent"
-                                              SizeChanged="OnTitleBarMenuComponentSizeChanged"/>
+                                              SizeChanged="OnTitleBarMenuComponentSizeChanged" />
         </custom:WindowContentControl.TitleBarLeftContent>
 
         <Grid>
@@ -53,4 +52,4 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
         </Grid>
     </custom:WindowContentControl>
 
-</wex:WindowEx>
+</custom:BaseWindow>
