--- a/src/Client/ProtonVPN.Client/UI/Dialogs/ReportIssue/ReportIssueWindow.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Dialogs/ReportIssue/ReportIssueWindow.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!--
-Copyright (c) 2024 Proton AG
+Copyright (c) 2025 Proton AG
 
 This file is part of ProtonVPN.
 
@@ -18,35 +18,34 @@ You should have received a copy of the GNU General Public License
 along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<wex:WindowEx x:Class="ProtonVPN.Client.UI.Dialogs.ReportIssue.ReportIssueWindow"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:local="using:ProtonVPN.Client.UI.Dialogs.ReportIssue"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:wex="using:WinUIEx"
-              IsResizable="False"
-              IsMaximizable="False"
-              IsMinimizable="False"
-              Width="456"
-              Height="659"
-              x:DefaultBindMode="OneWay"
-              mc:Ignorable="d">
-    
+<custom:BaseWindow x:Class="ProtonVPN.Client.UI.Dialogs.ReportIssue.ReportIssueWindow"
+                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
+                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                   xmlns:local="using:ProtonVPN.Client.UI.Dialogs.ReportIssue"
+                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                   Width="456"
+                   Height="659"
+                   x:DefaultBindMode="OneWay"
+                   IsMaximizable="False"
+                   IsMinimizable="False"
+                   IsResizable="False"
+                   mc:Ignorable="d">
+
     <!--  There's a consistent difference between the size defined here and the actual size  -->
     <!--  Adds 16px to the width and 9px to the height to compensate  -->
 
     <custom:WindowContentControl x:Name="WindowContainer"
-                                 TitleBarButtonsLength="46"
+                                 Title="{x:Bind Shell.ViewModel.Title}"
                                  IconSource="{StaticResource ProtonVpnOnApplicationIconSource}"
-                                 Title="{x:Bind Shell.ViewModel.Title}">
+                                 TitleBarButtonsLength="46">
 
         <custom:WindowContentControl.Resources>
-            <Style TargetType="ScrollViewer" BasedOn="{StaticResource OffsetScrollViewer}" />
+            <Style BasedOn="{StaticResource OffsetScrollViewer}" TargetType="ScrollViewer" />
         </custom:WindowContentControl.Resources>
-        
+
         <local:ReportIssueShellView x:Name="Shell" />
 
     </custom:WindowContentControl>
-</wex:WindowEx>
+</custom:BaseWindow>
