--- a/src/Client/ProtonVPN.Client/UI/Dialogs/Tray/TrayAppWindow.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Dialogs/Tray/TrayAppWindow.xaml
@@ -18,22 +18,24 @@ You should have received a copy of the GNU General Public License
 along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<wex:WindowEx x:Class="ProtonVPN.Client.UI.Dialogs.Tray.TrayAppWindow"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:local="using:ProtonVPN.Client.UI.Dialogs.Tray"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:wex="using:WinUIEx"
-              x:DefaultBindMode="OneWay"
-              IsMaximizable="False"
-              IsMinimizable="False"
-              IsResizable="False"
-              mc:Ignorable="d">
+<custom:BaseWindow x:Class="ProtonVPN.Client.UI.Dialogs.Tray.TrayAppWindow"
+                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
+                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                   xmlns:local="using:ProtonVPN.Client.UI.Dialogs.Tray"
+                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                   x:DefaultBindMode="OneWay"
+                   IsAlwaysOnTop="True"
+                   IsMaximizable="False"
+                   IsMinimizable="False"
+                   IsResizable="False"
+                   IsShownInSwitchers="False"
+                   IsTitleBarVisible="False"
+                   mc:Ignorable="d">
 
     <Border Background="{ThemeResource BackgroundNormColorBrush}">
         <local:TrayAppShellView x:Name="Shell" />
     </Border>
 
-</wex:WindowEx>
+</custom:BaseWindow>
